force-app/main/default/objects/Lead/fields/Ad_Channel__c.field-meta.xml
<CustomField>
    <fullName>Ad_Channel__c</fullName>
    <label>Ad Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A friend told me</fullName>
            </value>
            <value>
                <fullName>Delivery menu</fullName>
            </value>
            <value>
                <fullName>Facebook/Twitter/Instagram</fullName>
            </value>
            <value>
                <fullName>hungryhouse logo in a shop window</fullName>
            </value>
            <value>
                <fullName>Mailer in the post</fullName>
            </value>
            <value>
                <fullName>On TV</fullName>
            </value>
            <value>
                <fullName>Online banner advert</fullName>
            </value>
            <value>
                <fullName>Outdoor advertising</fullName>
            </value>
            <value>
                <fullName>hungryhouse sales representative</fullName>
            </value>
            <value>
                <fullName>Sticker Window</fullName>
            </value>
            <value>
                <fullName>Sales Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>