force-app/main/default/objects/Lead/fields/Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Address_ID__c</fullName>
    <label>Address ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>