force-app/main/default/objects/Lead/fields/Address_Number__c.field-meta.xml
<CustomField>
    <fullName>Address_Number__c</fullName>
    <label>Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>