force-app/main/default/objects/Lead/fields/Approach_method__c.field-meta.xml
<CustomField>
    <fullName>Approach_method__c</fullName>
    <label>Approach method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reveal Yogiyo</fullName>
            </value>
            <value>
                <fullName>Do NOT reveal Yogiyo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>