force-app/main/default/objects/Lead/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Area for middle east</description>
    <label>Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>