force-app/main/default/objects/Lead/fields/Best_Time_to_contact__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_contact__c</fullName>
    <label>Best Time to contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>