force-app/main/default/objects/Lead/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Vertical_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>African</fullName>
            </value>
            <value>
                <fullName>Alcohol</fullName>
            </value>
            <value>
                <fullName>All Night Alcohol</fullName>
            </value>
            <value>
                <fullName>American</fullName>
            </value>
            <value>
                <fullName>Aquariums</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Arepas y Empanadas</fullName>
            </value>
            <value>
                <fullName>Argentine</fullName>
            </value>
            <value>
                <fullName>argentinian</fullName>
                <label>Argentinian</label>
            </value>
            <value>
                <fullName>Armenian</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Austrian</fullName>
            </value>
            <value>
                <fullName>Bahraini</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Bangladeshi</fullName>
            </value>
            <value>
                <fullName>Barbecue</fullName>
            </value>
            <value>
                <fullName>Beijing</fullName>
            </value>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Brazilian</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>British</fullName>
            </value>
            <value>
                <fullName>Burger and Grill</fullName>
            </value>
            <value>
                <fullName>Burgers</fullName>
            </value>
            <value>
                <fullName>Burmese</fullName>
            </value>
            <value>
                <fullName>Cafe</fullName>
            </value>
            <value>
                <fullName>Cakes &amp; Bakery</fullName>
            </value>
            <value>
                <fullName>Calzones</fullName>
            </value>
            <value>
                <fullName>Cambodian</fullName>
            </value>
            <value>
                <fullName>Cantonese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>