force-app/main/default/objects/Lead/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <description>Company Code e.g Yogiyo, DH_AU etc.</description>
    <label>Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>