force-app/main/default/objects/Lead/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Record_Country__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>24h</fullName>
            </value>
            <value>
                <fullName>AIMNET/TCS (OrderMe)</fullName>
            </value>
            <value>
                <fullName>Akeed</fullName>
            </value>
            <value>
                <fullName>Akelni</fullName>
            </value>
            <value>
                <fullName>Akly</fullName>
            </value>
            <value>
                <fullName>Alosra Market</fullName>
            </value>
            <value>
                <fullName>Aptit.se</fullName>
            </value>
            <value>
                <fullName>Baedal Minjok</fullName>
            </value>
            <value>
                <fullName>Bakawi</fullName>
            </value>
            <value>
                <fullName>Baqaala</fullName>
            </value>
            <value>
                <fullName>Baqala</fullName>
            </value>
            <value>
                <fullName>Baqalo</fullName>
            </value>
            <value>
                <fullName>Bedal 114</fullName>
            </value>
            <value>
                <fullName>Bedal Call</fullName>
            </value>
            <value>
                <fullName>Bedal Minjok</fullName>
            </value>
            <value>
                <fullName>Bedal Tong</fullName>
            </value>
            <value>
                <fullName>Bleems</fullName>
            </value>
            <value>
                <fullName>Bonapettite</fullName>
            </value>
            <value>
                <fullName>Booky</fullName>
            </value>
            <value>
                <fullName>CareemNOW</fullName>
            </value>
            <value>
                <fullName>Carriage</fullName>
            </value>
            <value>
                <fullName>Carts</fullName>
            </value>
            <value>
                <fullName>Chef Menú</fullName>
            </value>
            <value>
                <fullName>ChefsXP</fullName>
            </value>
            <value>
                <fullName>Cholgabang</fullName>
            </value>
            <value>
                <fullName>Chompa</fullName>
            </value>
            <value>
                <fullName>Close Eat</fullName>
            </value>
            <value>
                <fullName>ComeYa</fullName>
            </value>
            <value>
                <fullName>Cravez</fullName>
            </value>
            <value>
                <fullName>Craving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>