force-app/main/default/objects/Lead/fields/Competitor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Notes__c</fullName>
    <description>Competitor notes(Sales notes from Old SF)</description>
    <label>Competitor Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>