force-app/main/default/objects/Lead/fields/Contacted_Date__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Date__c</fullName>
    <description>02140011 - First time agent spoke with decision maker</description>
    <label>Contacted Date</label>
    <type>DateTime</type>
</CustomField>