force-app/main/default/objects/Lead/fields/Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Coordinates__c</fullName>
    <description>Latitude &amp; Longitude related to this address on Leads</description>
    <label>Coordinates</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>