force-app/main/default/objects/Lead/fields/Courier_Service__c.field-meta.xml
<CustomField>
    <fullName>Courier_Service__c</fullName>
    <description>In order to mark these partners that use Courier Service as such in the system, we need an attribute of the Account that indicates if a partner is using Courier and how</description>
    <label>Courier Service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>B2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>