force-app/main/default/objects/Lead/fields/Cuisine__c.field-meta.xml
<CustomField>
    <fullName>Cuisine__c</fullName>
    <label>Cuisine</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>African</fullName>
            </value>
            <value>
                <fullName>All Night Alcohol</fullName>
            </value>
            <value>
                <fullName>American</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Arepas y Empanadas</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Austrian</fullName>
            </value>
            <value>
                <fullName>Bahraini</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Bakery and cakes</fullName>
            </value>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Brazilian</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>British</fullName>
            </value>
            <value>
                <fullName>Burger and Grill</fullName>
            </value>
            <value>
                <fullName>Burgers</fullName>
            </value>
            <value>
                <fullName>Café</fullName>
            </value>
            <value>
                <fullName>Caribbean</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Chicken</fullName>
            </value>
            <value>
                <fullName>Chifas</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Colombian</fullName>
            </value>
            <value>
                <fullName>Crepes</fullName>
            </value>
            <value>
                <fullName>CVS/Mart</fullName>
            </value>
            <value>
                <fullName>Desserts</fullName>
            </value>
            <value>
                <fullName>Dietary Options</fullName>
            </value>
            <value>
                <fullName>Egyptian</fullName>
            </value>
            <value>
                <fullName>Emirati</fullName>
            </value>
            <value>
                <fullName>Falafel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>