force-app/main/default/objects/Lead/fields/Deliveries_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Deliveries_Per_Month__c</fullName>
    <label>Deliveries Per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>