force-app/main/default/objects/Lead/fields/Delivery_Fee__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Fee__c</fullName>
    <description>Delivery Fee</description>
    <label>Delivery Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>