force-app/main/default/objects/Lead/fields/Delivery_Service__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Service__c</fullName>
    <label>Delivery Service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_Service</valueSetName>
    </valueSet>
</CustomField>