force-app/main/default/objects/Lead/fields/Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time__c</fullName>
    <description>Delivery Time field</description>
    <label>Delivery Time</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>