force-app/main/default/objects/Lead/fields/Delivery_Zone__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Zone__c</fullName>
    <description>Delivery Zone</description>
    <label>Delivery Zone</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>