force-app/main/default/objects/Lead/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <description>e.g. Berlin Friedrichshain, used also for GU in Korea</description>
    <label>District</label>
    <length>25</length>
    <type>Text</type>
</CustomField>