force-app/main/default/objects/Lead/fields/Dong__c.field-meta.xml
<CustomField>
    <fullName>Dong__c</fullName>
    <description>Part of the Korean Address</description>
    <label>Dong</label>
    <length>255</length>
    <type>Text</type>
</CustomField>