force-app/main/default/objects/Lead/fields/Duplicate_Id__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Id__c</fullName>
    <description>SP-3010</description>
    <inlineHelpText>If a Lead is a duplicate, please fill out this field / add the GRID or Id.</inlineHelpText>
    <label>Duplicate Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>