force-app/main/default/objects/Lead/fields/External_UUID__c.field-meta.xml
<CustomField>
    <fullName>External_UUID__c</fullName>
    <externalId>true</externalId>
    <label>External UUID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>