force-app/main/default/objects/Lead/fields/Feature_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Feature_Competitor__c</fullName>
    <label>Feature Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Top Competitor Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>