force-app/main/default/objects/Lead/fields/For_Business__c.field-meta.xml
<CustomField>
    <fullName>For_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Business</label>
    <type>Checkbox</type>
</CustomField>