force-app/main/default/objects/Lead/fields/Generated_Menu_Number__c.field-meta.xml
<CustomField>
    <fullName>Generated_Menu_Number__c</fullName>
    <description>this holds the generated menu number</description>
    <label>Generated Menu Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>