force-app/main/default/objects/Lead/fields/GRID__c.field-meta.xml
<CustomField>
    <fullName>GRID__c</fullName>
    <description>GRID to be transferred to account when lead record is converted</description>
    <label>GRID</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>