force-app/main/default/objects/Lead/fields/GunGu__c.field-meta.xml
<CustomField>
    <fullName>GunGu__c</fullName>
    <description>Korean Address detail</description>
    <label>GunGu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>