force-app/main/default/objects/Lead/fields/Hygiene_Rating__c.field-meta.xml
<CustomField>
    <fullName>Hygiene_Rating__c</fullName>
    <description>SFS-5381</description>
    <label>Hygiene Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>