force-app/main/default/objects/Lead/fields/Internet_Connectivity__c.field-meta.xml
<CustomField>
    <fullName>Internet_Connectivity__c</fullName>
    <label>Internet Connectivity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wireless Internet</fullName>
            </value>
            <value>
                <fullName>Cable Internet</fullName>
            </value>
            <value>
                <fullName>No Internet</fullName>
            </value>
            <value>
                <fullName>Not obtained yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>