force-app/main/default/objects/Lead/fields/lead_age_when_open__c.field-meta.xml
<CustomField>
    <fullName>lead_age_when_open__c</fullName>
    <formula>IF(ISPICKVAL(Status , &quot;Open&quot;), 
ROUND(NOW()-CreatedDate, 0), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Age When Open(Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>