force-app/main/default/objects/Lead/fields/Legal_form__c.field-meta.xml
<CustomField>
    <fullName>Legal_form__c</fullName>
    <label>Legal form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GmbH</fullName>
            </value>
            <value>
                <fullName>Einzelunternehmen</fullName>
            </value>
            <value>
                <fullName>OHG</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>AG</fullName>
            </value>
            <value>
                <fullName>GmbH &amp; Co. KG</fullName>
            </value>
            <value>
                <fullName>GbR</fullName>
            </value>
            <value>
                <fullName>LTD &amp; Co. KG</fullName>
            </value>
            <value>
                <fullName>UG (haftungsbeschränkt)</fullName>
            </value>
            <value>
                <fullName>UG (haftungsbeschränkt) &amp; Co. KG</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>UG</fullName>
                <isActive>false</isActive>
                <label>UG</label>
            </value>
            <value>
                <fullName>UG &amp; Co. KG</fullName>
                <isActive>false</isActive>
                <label>UG &amp; Co. KG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>