force-app/main/default/objects/Lead/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <description>this field shows the lost reason for lead</description>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blacklisted</fullName>
            </value>
            <value>
                <fullName>Capacity - Competitors</fullName>
            </value>
            <value>
                <fullName>Capacity - Driver Issues</fullName>
            </value>
            <value>
                <fullName>Capacity - Order Volume</fullName>
            </value>
            <value>
                <fullName>Capacity - Own Website</fullName>
            </value>
            <value>
                <fullName>Changed to different cuisine</fullName>
            </value>
            <value>
                <fullName>Closed Down</fullName>
            </value>
            <value>
                <fullName>Comission too high</fullName>
            </value>
            <value>
                <fullName>Decision maker not reached</fullName>
            </value>
            <value>
                <fullName>delivered by 3rd party</fullName>
            </value>
            <value>
                <fullName>Delivery In Plus 3Hours</fullName>
            </value>
            <value>
                <fullName>Disappointed by our business methods</fullName>
            </value>
            <value>
                <fullName>Do not contact</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Exclusive with competitor</fullName>
            </value>
            <value>
                <fullName>Exclusivity with Just-eat</fullName>
            </value>
            <value>
                <fullName>Fake restaurant on Just-Eat</fullName>
            </value>
            <value>
                <fullName>Fraud Restaurant</fullName>
            </value>
            <value>
                <fullName>High Class</fullName>
            </value>
            <value>
                <fullName>Hygiene Rating</fullName>
            </value>
            <value>
                <fullName>Invalid Data</fullName>
            </value>
            <value>
                <fullName>Language issues</fullName>
            </value>
            <value>
                <fullName>Lost to competition</fullName>
            </value>
            <value>
                <fullName>Low Rating</fullName>
            </value>
            <value>
                <fullName>No answer</fullName>
            </value>
            <value>
                <fullName>No brand</fullName>
            </value>
            <value>
                <fullName>No Cloud - Monthly Fee</fullName>
            </value>
            <value>
                <fullName>No Delivery Service</fullName>
            </value>
            <value>
                <fullName>Not able to register</fullName>
            </value>
            <value>
                <fullName>Not enough capacity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>