force-app/main/default/objects/Lead/fields/Mark_for_Testing_Training__c.field-meta.xml
<CustomField>
    <fullName>Mark_for_Testing_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this is been checked when is is been used for testing or training</description>
    <label>Mark for Testing / Training</label>
    <type>Checkbox</type>
</CustomField>