force-app/main/default/objects/Lead/fields/Menu_Typing_Menu_Link__c.field-meta.xml
<CustomField>
    <fullName>Menu_Typing_Menu_Link__c</fullName>
    <description>link to the menu</description>
    <label>Inbound Menu</label>
    <type>Url</type>
</CustomField>