force-app/main/default/objects/Lead/fields/Migration_status__c.field-meta.xml
<CustomField>
    <fullName>Migration_status__c</fullName>
    <description>Will be used to migrate Lead Statuses from Old System. Should be read-only field and removed after data in new system is cleaned up.</description>
    <label>Migration status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>