force-app/main/default/objects/Lead/fields/Minimum_order_value_Credit_card__c.field-meta.xml
<CustomField>
    <fullName>Minimum_order_value_Credit_card__c</fullName>
    <description>this field is used for Minimum order value - Credit card</description>
    <label>Minimum order value - Credit card</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>