force-app/main/default/objects/Lead/fields/Non_Contracted__c.field-meta.xml
<CustomField>
    <fullName>Non_Contracted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Non contracted restaurant in yogiyo marked with this checkbox</description>
    <label>Non Contracted</label>
    <type>Checkbox</type>
</CustomField>